# VideoEdittingTool

./: .gitignore  README.md  pyproject.toml
examples/: demo_commands.md
exe_script/: cut_clip.py
presets/: audio_to_video_preset.json  cut_clip.py
scripts/: run_audio_to_video.py
src/videotools/: __init__.py  cli.py  ffmpeg.py  paths.py  presets.py  timecode.py
src/videotools/ops/: __init__.py  audio_to_video.py  concat.py  cut_duration.py  cut_fixed.py  extract_audio.py  normalize_audio.py  probe.py  thumbnail.py  transcode.py
tests/: test_ops_validation.py  test_presets.py  test_timecode.py
