[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-tools"
version = "0.1.0"
description = "Modular CLI toolkit for small video editing operations powered by ffmpeg."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.12.3"]

[project.scripts]
video-tools = "videotools.cli:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
